src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Pride Applicant</fullName>
        <description>created for layout v2.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Accepted</fullName>
        </values>
        <values>
            <fullName>Application</fullName>
        </values>
        <values>
            <fullName>Deferred</fullName>
        </values>
        <values>
            <fullName>EOI</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Evaluation</fullName>
        </values>
        <values>
            <fullName>Fit Assessment</fullName>
        </values>
        <values>
            <fullName>Interviews</fullName>
        </values>
        <values>
            <fullName>Recommended for Cohort</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Pride Application</fullName>
        <description>superceded by &quot;Pride Applicant&quot; process.  this one created just for legacy purposes.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Application%2FLead Agency Conversation</fullName>
        </values>
        <values>
            <fullName>BINGO Conversation</fullName>
        </values>
        <values>
            <fullName>Campaign Manager Conversation</fullName>
        </values>
        <values>
            <fullName>Closed Accepted</fullName>
        </values>
        <values>
            <fullName>Closed Rejected</fullName>
        </values>
        <values>
            <fullName>Final Decision</fullName>
        </values>
        <values>
            <fullName>Final Welcome Conversation</fullName>
        </values>
        <values>
            <fullName>Fit and Sell</fullName>
        </values>
        <values>
            <fullName>Funding%2FMOU</fullName>
        </values>
        <values>
            <fullName>Pre-Application Screened</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Ability_to_learn_new_concepts__c</fullName>
        <label>Ability to learn new concepts</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ability_to_monitor_conservation_impact__c</fullName>
        <label>Ability to monitor conservation impact</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Added_value_of_Pride_to_career__c</fullName>
        <label>Added value of Pride to career</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Added_value_of_Rare__c</fullName>
        <label>Added value of Rare</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_CM_Information__c</fullName>
        <label>Additional CM Information</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_staff_support__c</fullName>
        <label>Additional staff support</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adult_movement_of_target_species__c</fullName>
        <label>Adult movement of target species</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_of_Application__c</fullName>
        <formula>IF( IsClosed,
null, 
NOW() - CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Applicant Record Has Been Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>All_Interviews_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>created for application layout v2</description>
        <label>All Interviews Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicant_Notified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>created for application layout v2.</description>
        <label>Applicant Notified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicant_not_scored__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applicant not scored</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Comments__c</fullName>
        <label>Application Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Application_Invite_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application Invite Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Part_3_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is completed over the phone with Country Director and Key Contact at Lead Agency during Conversation 2.</description>
        <label>Application Part 3 Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Received_2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>renamed label &amp; name from &quot;Application Complete&quot; for layout v2.</description>
        <label>Application Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_is_a_Go__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application is a Go</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_is_a_No_Go__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application is a No Go</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_fishers_local__c</fullName>
        <label>Are fishers local</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attended_Social_Marketing_Workshop__c</fullName>
        <defaultValue>false</defaultValue>
        <description>created for application layout v2</description>
        <label>Attended Social Marketing Workshop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B6Score_Campaign_Manager__c</fullName>
        <formula>(  CM_candidate_is_available__c  +  Likelihood_to_stay_at_IP__c  +  Role_at_IP__c  +  Years_of_related_work_experience__c  +  Experience_with_audience_and_community__c  +  Site_accessibility__c  +  Reliability__c  +   Critical_thinking_skills__c  +  Verbal_Communication__c  +  Commitment_to_community_led_conservation__c  +  Technological_skills__c  +   Project_management_ability__c  +  Writing_skills__c  +  Ability_to_learn_new_concepts__c  +  Mindset_of_solutionology__c  +   SC2_CM_4_Educational_Background__c 
  +  Experience_with_BR_partners__c  + CM_capacity_to_manage_fisheries__c  )  / 18</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Manager Quality</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B6Scoring_Implementing_Partner_Quality__c</fullName>
        <formula>(Financial_Support_for_Pride__c + Added_value_of_Rare__c + Project_Management__c + Organization_size__c + Relationship_with_site_and_community__c + Commitment_to_conservation__c + Ability_to_monitor_conservation_impact__c + Baseline_data__c + Decision_maker_support__c + Additional_staff_support__c + Influence_and_partnerships__c + Potential_ability_to_scale__c + Financial_ability_to_sustain_impact__c + Long_term_commitment_to_site__c + IP_capacity_to_manage_fisheries__c ) / 14</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementing Partner Quality</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B6Scoring_Site_Quality__c</fullName>
        <formula>( Environmental_Security_Risk__c + Physical_violence_security_risk__c + Funding_opportunities_for_site__c + 	Strategic_value_of_the_site__c + SC2_BC_1_Target_Audience__c + Community_size__c + Political_Leadership__c + Coral_reef_condition__c + Biodiversity_species_richness__c + Habitat_diversity__c + Water_Exchange__c + Adult_movement_of_target_species__c + Species_changes_in_catch__c + Change_in_average_fish_size__c + Number_of_fishers__c + Capacity_for_fishery_management__c + Infrastructure_for_fisheries_management__c + Fishing_licenses__c + Organization_of_fishers__c + Nature_and_extent_of_illegal_fishing__c + Frequency_of_destructive_fishing__c + Fishing_ground_proximity__c + Dependence_on_middle_man__c + Potential_for_alternative_livelihoods__c + Community_spatial_distribution__c + Champion_for_fisheries_sustainability__c + Increase_in_human_populations__c + Fish_abundance_in_NTZ__c + Community_openness_to_outsiders__c + Social_capacity_for_conservation_efforts__c) /30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Quality</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B6Scoring_TRS_Quality__c</fullName>
        <formula>(TRS_Project_Management_Skills__c + TRS_Solutionology__c + TRS_Critical_Thinking_Skills__c + TRS_Knowledge_of_local_policy__c + TRS_Experience_working_with_fishers__c + Familiarity_working_with_data_collection__c + TRS_Willing_to_travel_by_boat_air_road__c + Interest_ability_to_interact_w_experts__c + Willingness_interest_training_others__c + TRS_Experiece_with_fisheries_data__c + Willingness_to_learn_new_techniques__c + Experience_with_fishing_community__c + TRS_Meeting_coordination__c + TRS_Knowledge_of_relevant_regulations__c + TRSBachelor_s_degree_in_science_or_equiv__c	+ Skills_to_organize_and_present_fish_data__c + Experience_in_fisheries_data_collection__c + TRS_Experience_with_fisheries_management__c + TRS_Experience_in_fisheries_supply_chain__c + Connection_to_fisheries_mgmt_authority__c + TRS_English_language_skills__c) / 21</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TRS Quality</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B6Scoring_Total_Appliant_Score__c</fullName>
        <formula>(B6Scoring_Implementing_Partner_Quality__c*0.3) + (B6Score_Campaign_Manager__c*0.2) + (B6Scoring_TRS_Quality__c*0.15) + (B6Scoring_Site_Quality__c*0.35)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Appliant Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BINGO_Conversation_Comments__c</fullName>
        <label>Strategic Partner Conversation Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BINGO_Conversation_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Strategic Partner Conversation Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BINGO_Conversation_Interviewer__c</fullName>
        <label>SP Conversation Interviewer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BINGO_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Strategic Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pride Applications</relationshipLabel>
        <relationshipName>Case</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Barrier_Removal_Activities_Other__c</fullName>
        <label>Barrier Removal Activities Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barrier_Removal_Activities_at_Site_IN__c</fullName>
        <label>Barrier Removal Activities at Site (IN)</label>
        <picklist>
            <picklistValues>
                <fullName>Community-based NTZ enforcement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boundary marking of NTZs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative livelihoods programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fishing gear regulation/substitution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment for local fishers in MPA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Barrier_Removal_Activities_at_Site__c</fullName>
        <label>Barrier Removal Activities at Site</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community-led watershed management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Watershed alliance formation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainable agriculture training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promoting traditional farming activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPA feasibility studies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPA setup or community co-management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPA scientific and impact monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Train &amp; conduct community bio-monitoring</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Barrier_Removal_Activities_at_site_PH2__c</fullName>
        <description>Possible barrier removal activities at PHILI2 applicant sites</description>
        <label>Barrier Removal Activities at site PH2</label>
        <picklist>
            <picklistValues>
                <fullName>Community-led watershed management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inter LGU alliance formation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community based MPA establishment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training on sustainable farming/fishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coastal/Fisheries resource management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPA assessment, research, monitor impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPA enforcement &amp; institutional strength</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacity building/training on MPA/CFRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Specify Below)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Baseline_Data_Availability_and_Threats__c</fullName>
        <label>Baseline Data Availability and Threats</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Baseline_data__c</fullName>
        <label>Baseline data</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bingo_Conversation_Interview_Method__c</fullName>
        <label>SP Conversation Interview Method</label>
        <picklist>
            <picklistValues>
                <fullName>In Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skype</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Biodiversity_species_richness__c</fullName>
        <label>Biodiversity - species richness</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brazil1_Campaign_Manager_Quality__c</fullName>
        <formula>( CM_candidate_is_available__c + Likelihood_to_stay_at_IP__c + Role_at_IP__c + Years_of_related_work_experience__c + Experience_with_audience_and_community__c + Site_accessibility__c + Reliability__c + Critical_thinking_skills__c + Verbal_Communication__c + Commitment_to_community_led_conservation__c + Technological_skills__c + Project_management_ability__c + Writing_skills__c + Ability_to_learn_new_concepts__c + Mindset_of_solutionology__c + SC2_CM_4_Educational_Background__c
+ Experience_with_BR_partners__c + CM_capacity_to_manage_fisheries__c ) / 18</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Manager Quality</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brazil1_Implementing_Partner_Quality__c</fullName>
        <formula>(Financial_Support_for_Pride__c + Added_value_of_Rare__c + Project_Management__c + Organization_size__c + Relationship_with_site_and_community__c + Commitment_to_conservation__c + Ability_to_monitor_conservation_impact__c + Baseline_data__c + Decision_maker_support__c + Additional_staff_support__c + Influence_and_partnerships__c + Potential_ability_to_scale__c + Financial_ability_to_sustain_impact__c + Long_term_commitment_to_site__c + IP_capacity_to_manage_fisheries__c + Interest_implementing_TURFs__c) / 16</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementing Partner Quality</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brazil1_Site_Quality__c</fullName>
        <formula>( Environmental_Security_Risk__c + Physical_violence_security_risk__c + Funding_opportunities_for_site__c + Strategic_value_of_the_site__c + SC2_BC_1_Target_Audience__c + Community_size__c + Political_Leadership__c + Biodiversity_species_richness__c + Habitat_diversity__c + Water_Exchange__c + Adult_movement_of_target_species__c + Species_changes_in_catch__c + Change_in_average_fish_size__c + Number_of_fishers__c + Infrastructure_for_fisheries_management__c + Fishing_licenses__c + Organization_of_fishers__c + Nature_and_extent_of_illegal_fishing__c + Frequency_of_destructive_fishing__c + Fishing_ground_proximity__c + Dependence_on_middle_man__c + Potential_for_alternative_livelihoods__c + Community_spatial_distribution__c + Champion_for_fisheries_sustainability__c + Increase_in_human_populations__c + Community_openness_to_outsiders__c + Social_capacity_for_conservation_efforts__c + Habitat_representation__c + Management_Plan__c + Marine_Reserve__c + Conselho_deliberativo__c + Fisheries_management_regulations__c) /32</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Quality</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brazil1_Total_Applicant_Score__c</fullName>
        <formula>(Brazil1_Implementing_Partner_Quality__c*0.3) + (Brazil1_Campaign_Manager_Quality__c*0.3) + (Brazil1_Site_Quality__c*0.4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Applicant Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bright_spot_potential__c</fullName>
        <label>Bright spot potential</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C4C_Application_Score__c</fullName>
        <label>C4C Application Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C4C_Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>C4C Attendee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (C4C Attendee)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CM_Email__c</fullName>
        <formula>Campaign_Manager__r.Email</formula>
        <label>CM Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Has_Degree__c</fullName>
        <formula>TEXT(Campaign_Manager__r.Has_BA_degree__c)</formula>
        <label>CM Has Degree?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Organization__c</fullName>
        <formula>Campaign_Manager__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CM Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Years_with_Org__c</fullName>
        <formula>Campaign_Manager__r.Years_with_Org__c</formula>
        <label>CM - Years with Org</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CM_candidate_is_available__c</fullName>
        <label>CM candidate is available</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CM_capacity_to_manage_fisheries__c</fullName>
        <label>CM capacity to manage fisheries</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Manager_Bio_Long__c</fullName>
        <label>Campaign Manager Bio Long</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Manager_Bio__c</fullName>
        <formula>Campaign_Manager__r.Campaign_Manager_Bio__c</formula>
        <label>Campaign Manager Bio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Manager_Conversation_Comments__c</fullName>
        <label>Campaign Manager Conversation Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Manager_Interview_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Campaign Manager Interview Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Manager_Interview_Method__c</fullName>
        <label>Campaign Manager Interview Method</label>
        <picklist>
            <picklistValues>
                <fullName>In Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skype</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Manager_Interviewer__c</fullName>
        <label>Campaign Manager Interviewer</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Manager_Overall_Score__c</fullName>
        <formula>Knowledge_of_Pride__c  +  Educational_Background__c + Employment_background__c + Site_Experience__c + Motivation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Manager Overall Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Manager_Score__c</fullName>
        <label>Campaign Manager Score</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Manager_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Campaign Manager Interview Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaign Manager Applicant</relationshipLabel>
        <relationshipName>Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Site__c</fullName>
        <description>Where is the campaign going to be?</description>
        <label>Campaign Site</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Strengths__c</fullName>
        <description>Brief description of campaign strengths or benefits for Ops Plan Report</description>
        <inlineHelpText>Campaign strengths for Ops Plan Report</inlineHelpText>
        <label>Campaign Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Capacity_for_enforcement__c</fullName>
        <label>Capacity for enforcement</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacity_for_fishery_management__c</fullName>
        <label>Capacity for fishery management</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacity_to_gain_external_resources__c</fullName>
        <label>Capacity to gain external resources</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacity_to_gain_internal_resources__c</fullName>
        <label>Capacity to gain internal resources</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cash_crop_existence__c</fullName>
        <label>Cash crop existence</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Challenges_meeting_Requirements__c</fullName>
        <label>Challenges meeting requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Champion_for_fisheries_sustainability__c</fullName>
        <label>Champion for fisheries sustainability</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_in_average_fish_size__c</fullName>
        <label>Change in average fish size</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check1__c</fullName>
        <formula>Campaign_Manager__r.If_no_where_does_CM_work__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cohort_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cohort</label>
        <referenceTo>Cohort__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cohort_Start_Date__c</fullName>
        <label>Cohort Start Date</label>
        <picklist>
            <controllingField>Cohort__c</controllingField>
            <picklistValues>
                <fullName>6/11/2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9/17/2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9/15/2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9/24/2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09/02/2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5/14/2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01/09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10/08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02/02/09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02/10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7/14</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cohort__c</fullName>
        <label>Cohort</label>
        <picklist>
            <picklistValues>
                <fullName>Bogor 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 2 - Spring &apos;07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 3 - Fall &apos;08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil Future</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 1 - Summer &apos;08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 3 Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 6 - Fall &apos;07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 7 - Fall &apos;08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP 1 - Spring &apos;09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP 5 - Fish Forever</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phili 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phili 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WIO 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kent 1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commitment_to_community_led_conservation__c</fullName>
        <label>Commitment to community-led conservation</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commitment_to_conservation__c</fullName>
        <label>Commitment to conservation</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Communication_work_experience__c</fullName>
        <label>Communication work experience</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Community_environmental_awareness__c</fullName>
        <label>Community environmental awareness</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Community_leadership_of_fishers__c</fullName>
        <label>Community leadership of fishers</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Community_openness_to_outsiders__c</fullName>
        <label>Community openness to outsiders</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>